// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot long number 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AxjAm hudJyp"
  data-testid="button"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    9999999
  </span>
</button>
`;

exports[`matches snapshot normal text 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AxjAm hudJyp"
  data-testid="button"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    Add task
  </span>
</button>
`;

exports[`matches snapshot wierd text 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root MuiButton-contained sc-AxjAm hudJyp"
  data-testid="button"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    chomik dżungarski
  </span>
</button>
`;
